# grad-anim

./: Cargo.toml  README.md  err.txt  input.txt
src/: main.rs
