[package]
name = "amongus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.0", features = ['derive']}
crossterm = "0.26.1"
ncurses = {version = "5.101.0", features = ['extended_colors']}
rand = "0.8.5"
